# email-organizer

./: .gitignore  Allfolders  Allfolders2  Append to master file  Checks  Diff sheets append  Fetch date filter files  Fetch files loop  Fetchemails  Fetchfiles  Fetchfiles2  Fetchfiles3  Fetchupdatedexcel  Newestonly  Pullfilesandappend  Pyllfirstfiletrst  README.md  Sharedrivebase1  Updatemastercsv  When and when NOT to use NLP.rtf  email_extract_v1.ipynb  main.py  pyproject.toml
email_organizer/: __init__.py  models.py  organizer.py  parser.py  rules.py  storage.py
email_organizer.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
tests/: __init__.py  test_models.py  test_organizer.py  test_parser.py  test_rules.py  test_storage.py
